src/objects/Child_Object__c.object
<CustomObject>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Global_Pick_List_Test__c</fullName>
        <label>Global Pick List Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Pick_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType_Number__c</fullName>
        <label>RecordType Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Child Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Child-{0000}</displayFormat>
        <label>Child Object Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Object</pluralLabel>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2</fullName>
        <active>true</active>
        <label>RecordType2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType3</fullName>
        <active>true</active>
        <label>RecordType3</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>